<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 Riccardo Leschiutta.

    This file is part of Parappnoid.

    Parappnoid is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Parappnoid is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Parappnoid.  If not, see <http://www.gnu.org/licenses/>. -->

<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"> 
	
    <PreferenceCategory
		android:title="@string/settings">

		<CheckBoxPreference
			android:key="show_notification"
			android:title="@string/setting_notification_1"
			android:summary="@string/setting_notification_2"
			android:defaultValue="true"/>

		<Preference
			android:key="edit_DB"
			android:title="@string/setting_edit"
			android:summary="@string/setting_edit_2"/>

	</PreferenceCategory>

</PreferenceScreen>