<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 Riccardo Leschiutta.

    This file is part of Parappnoid.

    Parappnoid is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Parappnoid is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Parappnoid.  If not, see <http://www.gnu.org/licenses/>. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Username -->
    <TextView
        android:id="@+id/label_username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_toRightOf="@id/label_username"
        android:singleLine="true"
        android:textColor="@color/black" />

    <!-- Avatar -->
    <TextView
        android:id="@+id/label_avatar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/label_username"
        android:gravity="center"
        android:text="@string/avatar" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@id/username"
        android:layout_below="@id/username"
        android:src="@drawable/avatar0" />

    <!-- CLIENT/SERVER radio buttons chooser -->
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/avatar">

        <RadioButton
            android:id="@+id/radio_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="SONO SERVER" />

        <RadioButton
            android:id="@+id/radio_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SONO CLIENT" />

    </RadioGroup>

    <!-- Server fields only -->
    <RelativeLayout
        android:id="@+id/server_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group">

        <!-- Number of Keys -->
        <TextView
            android:id="@+id/label_n_keys"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/number_keys" />

        <EditText
            android:id="@+id/n_keys"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/label_n_keys"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/black" />

        <!-- Keys per QR -->
        <TextView
            android:id="@+id/label_keys_per_qr"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/label_n_keys"
            android:gravity="center"
            android:text="@string/keys_per_qr" />

        <EditText
            android:id="@+id/keys_per_qr"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/n_keys"
            android:layout_toRightOf="@id/label_keys_per_qr"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/black" />

    </RelativeLayout>

    <!-- Associate button -->
    <Button
        android:id="@+id/associate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/server_area"
        android:gravity="center"
        android:text="VAI" />

</RelativeLayout>